fix #1450: align splash stats

--- a/client/Components/GameBoard/WinLoseSplash.scss
+++ b/client/Components/GameBoard/WinLoseSplash.scss
@@ -47,47 +47,45 @@
         margin-top: 10px;
     }
 
-    .splash-stats-box {
+    .splash-stats-box-columns {
         display: flex;
-        flex-direction: column;
-        margin-bottom: 10px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        justify-content: center;
 
-        .stat {
-            font-size: 20px;
-            align-self: center;
-            line-height: 20px;
-            margin-top: 5px;
+        .stat-column {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 70px;
 
-            &.header {
-                display: flex;
-
-                .decklist-entry-image {
-                    height: 40px;
-                }
+            .stat {
+                font-size: 20px;
+                height: 24px;
+                margin-top: 5px;
             }
+        }
+
+        .decklist-entry-image {
+            height: 40px;
         }
 
         .cards-icon {
             width: 24px;
             height: 24px;
+            vertical-align: text-bottom;
         }
 
         .stat-icon {
-            margin: auto 40px;
             width: 24px;
             height: 24px;
         }
 
         .stat-vs {
-            margin: auto 10px;
             width: 24px;
-            height: 24px;
+            height: 40px;
+            line-height: 40px;
         }
 
-        .blood-stat-icon {
-            margin: auto 42px;
-            width: 20px;
-            height: 20px;
-        }
     }
 }
